[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypo-rag"
version = "0.1.0"
description = "HyPo-RAG: Hypothesis-Guided Policy-Distilled Retrieval-Augmented Generation over Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HyPo-RAG Team"}
]
keywords = ["rag", "knowledge-graph", "llm", "reasoning", "hypothesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core LLM and embeddings
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    
    # KG and retrieval (local, no SPARQL endpoint needed)
    "marisa-trie>=1.1.0",
    
    # Data processing
    "datasets>=2.16.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    
    # Evaluation
    "scikit-learn>=1.3.0",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Nikita-A-Tatarinov/HyPo-RAG"
Repository = "https://github.com/Nikita-A-Tatarinov/HyPo-RAG"

[tool.hatch.build.targets.wheel]
packages = ["hypo_rag"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
